Fixed footer alignment.

--- a/lesson03/styles/chamber-base.css
+++ b/lesson03/styles/chamber-base.css
@@ -21,6 +21,11 @@ header {
     margin-bottom: 30px;
 }
 
+footer {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 .purpose {
     font-size: larger;
     max-width: 635px;
